# ChangeLog for dev-libs/libtrain
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtrain/ChangeLog,v 1.6 2004/07/02 04:50:17 eradicator Exp $

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> libtrain-0.9b.ebuild:
  virtual/glibc -> virtual/libc

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*libtrain-0.9b (09 June 2002)

  09 June 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.