@@ -1,3 +1,3 @@
-MD5 8a87ae88c4ddb8e6bc1e5e1c99701bd6 ChangeLog 878
-MD5 2f0db4c31e2ac8719cca95efaeff331a libtrain-0.9b.ebuild 594
+MD5 82d890da3facbaf2b0b066995fb5d23a ChangeLog 958
+MD5 299bcdab8cd972bade0df7a184832c00 libtrain-0.9b.ebuild 596
 MD5 7adbd6eb32691b9cf07a79809fec0a9a files/digest-libtrain-0.9b 65
