@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtrain/libtrain-0.9b.ebuild,v 1.10 2004/07/14 14:48:02 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtrain/libtrain-0.9b.ebuild,v 1.11 2005/07/21 17:19:21 dholm Exp $
 
 DESCRIPTION="Library for calculating fastest train routes"
 SRC_URI="http://www.on.rim.or.jp/~katamuki/software/train/${P}.tar.gz"
@@ -8,7 +8,7 @@ HOMEPAGE="http://www.on.rim.or.jp/~katamuki/software/train/"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 sparc"
+KEYWORDS="~ppc sparc x86"
 IUSE=""
 
 DEPEND="virtual/libc"
