@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libtrain
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtrain/ChangeLog,v 1.6 2004/07/02 04:50:17 eradicator Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtrain/ChangeLog,v 1.7 2005/07/21 17:19:21 dholm Exp $
+
+  21 Jul 2005; David Holm <dholm@gentoo.org> libtrain-0.9b.ebuild:
+  Added to ~ppc.
 
   01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> libtrain-0.9b.ebuild:
   virtual/glibc -> virtual/libc
